--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-generate",
-  "description": "The first cli",
-  "version": "1.0.0",
+  "description": "the static page generator",
+  "version": "1.0.1",
   "keywords": [
     "toolkit",
     "cli"
