--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "static-generate",
   "description": "the static page generator",
-  "version": "1.0.2",
+  "version": "1.1.6",
   "keywords": [
     "toolkit",
-    "cli"
+    "cli",
+    "static-generate"
   ],
   "files": [
     "lib",
     "bin"
   ],
   "bin": {
-    "sg": "./bin/sg.js"
+    "sg": "bin/sg.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/liujians/static-generate"
   },
   "dependencies": {
     "colors": "^1.1.2",
