--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-generate",
   "description": "the static page generator",
-  "version": "1.2.8",
+  "version": "1.4.1",
   "keywords": [
     "toolkit",
     "cli",
@@ -9,7 +9,8 @@
   ],
   "files": [
     "lib",
-    "bin"
+    "bin",
+    "example"
   ],
   "bin": {
     "sg": "bin/sg.js"
@@ -18,7 +19,7 @@
     "type": "git",
     "url": "git://github.com/liujians/static-generate"
   },
-  "dependencies": {
+  "dependencies": { 
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "ejs": "^2.5.6",
